# Trailrunning-Training-Project

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  config.py  my info.txt  providers.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
demo/eval/: eval_report.json  revised-plan-reeval.json
demo/plans/: coach_brief_training-plan.txt  revised-plan-comparison.json  revised-plan.json
demo/rollups/: combined_rollups.json
docs/: engineering.md
src/trailtraining/: cli.py  config.py  contracts.py  doctor.py  ics_export.py
src/trailtraining.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/trailtraining/commands/: llm_commands.py  parser.py  pipeline_commands.py
src/trailtraining/data/: combine.py  garmin.py  personal_profile.py  strava.py
src/trailtraining/forecast/: forecast.py
src/trailtraining/intervals/: __init__.py  intervalsClient.mjs  intervals_fetch_wellness.mjs  scheduleSync.mjs  server.mjs
src/trailtraining/llm/: __init__.py  coach.py  coach_io.py  coach_prompting.py  constraints.py  eval.py  guardrails.py  presets.py  prompts.py  revise.py  schemas.py  signals.py  (+1 more)
templates/: env.template  profile.template.yaml
tests/: helpers.py  test_cli_smoke.py  test_coach_constraints.py  test_commands_llm.py  test_commands_pipeline.py  test_constraints_helpers.py  test_eval_additional.py  test_garmin_filter_sleep.py  test_imports.py  test_integration_artifacts.py  test_logging_config.py  test_regression_review_fixes.py  test_revise_plan.py  test_soft_eval_few_shot.py
(+16 files in other folders)
