[metadata]
name = trailtraining
version = 0.1.0

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9

install_requires =
    Flask
    openai>=1.0.0
    pandas
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    trailtraining = trailtraining.cli:main